# proxy_tool

./: PRIVACY_POLICY.html  PRIVACY_POLICY.md  PRIVACY_POLICY_RU.md  README.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_tun2proxy_bridge.cpp
android/app/src/main/kotlin/org/roboratory/proxy_tool/: MainActivity.kt  NativeTun2ProxyBridge.kt  ProxyVpnService.kt  ProxyWidgetProvider.kt  RuntimeEventDispatcher.kt  WidgetStateStore.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  proxy_widget_background.xml  proxy_widget_button_background.xml
android/app/src/main/res/drawable-v21/: launch_background.xml
android/app/src/main/res/layout/: proxy_widget.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: proxy_widget_info.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: unity_ads_config.dart
lib/data/: connection_storage.dart
lib/models/: connection_log_entry.dart  proxy_connection.dart
lib/platform/: proxy_runtime.dart
lib/screens/: app_picker_screen.dart  connection_form_screen.dart  home_screen.dart  logs_screen.dart
lib/widgets/: app_gradient_background.dart  glass_panel.dart  unity_banner_slot.dart
test/: widget_test.dart
